# vcf-reformatter

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  dockerfile
.github/workflows/: ci.yml  crates.yml  release.yml
src/: essentials_fields.rs  extract_ann_and_ann_names.rs  extract_csq_and_csq_names.rs  extract_sample_info.rs  get_info_from_header.rs  lib.rs  main.rs  read_vcf_gz.rs  reformat_vcf.rs
tests/: test.rs
